<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        style="@style/Theme.Background"
        />


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hardroid.lab_4_1.MainActivity">

    <!-- Team A and Team B texts -->
    <LinearLayout
        android:id="@+id/ll_teams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/txt_team_a"
            android:text="@string/team_a"
            style="@style/Theme.Teams"
            android:background="@drawable/team_a_style"
            />

        <TextView
            android:id="@+id/txt_team_b"
            android:layout_width="0dp"
            android:text="@string/team_b"
            style="@style/Theme.Teams"
            android:background="@drawable/team_b_style"
             >
        </TextView>
    </LinearLayout>

    <!-- Scores and vals -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_teams">

        <TextView
            android:id="@+id/txt_scores"
            style="@style/Theme.Scores"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:paddingStart="70dp"
            android:paddingEnd="70dp"
            android:text="@string/txt_scores"
            android:textSize="45sp"/>


        <LinearLayout
            android:id="@+id/scores_value_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/a_score"
                style="@style/Theme.ScoreValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="2"
                android:background="@drawable/universal_style"
                android:backgroundTint="@color/score_value_a_color"
                android:text="@string/a_score" />

            <TextView
                style="@style/Theme.VS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/vs"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/b_score"
                style="@style/Theme.ScoreValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="2"
                android:background="@drawable/universal_style"
                android:backgroundTint="@color/score_value_b_color"
                android:text="@string/b_score" />


        </LinearLayout>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/toggle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/team_a"
            style="@style/Theme.Switch"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            android:thumb="@drawable/toggle"
            android:checked="false"
            />
    </LinearLayout>

    <!-- Toggle, buttons,radios -->
    <LinearLayout
        android:id="@+id/toggles_plus_minus_radios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/plus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/plus"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/minus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/minus"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />

        </LinearLayout>


        <RadioGroup
            android:id="@+id/RG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/r1"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scr_1"
                style="@style/Theme.RadioButtons"/>


            <RadioButton
                android:id="@+id/r2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scr_2"
                style="@style/Theme.RadioButtons"/>

            <RadioButton
                android:id="@+id/r3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scr_3"
                style="@style/Theme.RadioButtons"/>

            <RadioButton
                android:id="@+id/r4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scr_4"
                style="@style/Theme.RadioButtons"/>
        </RadioGroup>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>